--- a/.github/workflows/openwrt-armv8.yml
+++ b/.github/workflows/openwrt-armv8.yml
@@ -39,7 +39,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Initialization environment
       env:
@@ -107,7 +107,7 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
+        echo "{status}={success}" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
@@ -131,13 +131,13 @@ jobs:
         mv -f IPK.tar.gz ../
 
     - name: Deliver package
-      uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@v3
       with:
         name: IPK ${{ env.FILE_DATE }}
         path: ./openwrt/bin/package/
 
     - name: Deliver firmware
-      uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@v3
       with:
         name: firmware ${{ env.FILE_DATE }}
         path: ./openwrt/bin/firmware/
@@ -147,7 +147,7 @@ jobs:
       run: |
         cd openwrt
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        echo "{status}={success}" >> $GITHUB_OUTPUT
 
     - name: Package Armvirt as OpenWrt
       uses: ophub/flippy-openwrt-actions@main
@@ -166,7 +166,7 @@ jobs:
         rm -rf $(find ./output/ -name "sha256sums")
         cd $GITHUB_WORKSPACE/openwrt/bin
         cp IPK.tar.gz /opt/openwrt_packit/output/
-        echo "::set-output name=status::success"
+        echo "{status}={success}" >> $GITHUB_OUTPUT
 
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
