--- a/.github/workflows/openwrt-armv8.yml
+++ b/.github/workflows/openwrt-armv8.yml
@@ -23,9 +23,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: lede/feeds.conf.default
-  CONFIG_FILE: lede/armv8.config
-  DIY_P1_SH: lede/armv8/diy-part1.sh
-  DIY_P2_SH: lede/armv8/diy-armv8.sh
+  CONFIG_FILE: lede/openwrt-armv8.config
+  DIY_P1_SH: lede/diy-part1.sh
+  DIY_P2_SH: lede/diy-armv8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
